--- a/swag/DISCORD.html
+++ b/swag/DISCORD.html
@@ -27,7 +27,11 @@ function get(file)
     rawFile.send(null);
 	return rawFile.responseText;
 }
-document.getElementById('text').innerHTML = get("http://pikabot01.xyz/wow/110373943822540800.txt").replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>').replace('|', '<br>');
+while ("hi" == "hi")
+{
+document.getElementById('text').innerHTML = get("http://pikabot01.xyz/wow/110373943822540800.txt").replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>');
+console.log("Updated Stuff");
+}
 </script>
 <body>
 </html>
