--- a/swag/DISCORD.html
+++ b/swag/DISCORD.html
@@ -1,37 +1,22 @@
 <html>
 <head>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <title>DISCORD BOTS IN YO BROWSER</title>
 </head>
 <body>
 <h1>LIVE CHAT</h1>
-<div style="background: black; border:1px solid black;">
-<p id="text" style="color: white;">
+<div id="woah" style="border:1px solid black;">
 LOADING...
-</p>
 </div>
 <script>
-function get(file)
-{
-    var rawFile = new XMLHttpRequest();
-    rawFile.open("GET", file, false);
-    rawFile.onreadystatechange = function ()
-    {
-        if(rawFile.readyState === 4)
-        {
-            if(rawFile.status === 200 || rawFile.status == 0)
-            {
-                var allText = rawFile.responseText;
-            }
-        }
-    }
-    rawFile.send(null);
-	return rawFile.responseText;
+function update() {
+  $.get("http://pikabot01.xyz/wow/110373943822540800.txt", function(data) {
+	var ayy = data.replace(/\\/g, "<br>");
+    $("#woah").html(ayy);
+    window.setTimeout(update, 1000);
+  });
 }
-while ("hi" == "hi")
-{
-document.getElementById('text').innerHTML = get("http://pikabot01.xyz/wow/110373943822540800.txt").replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>').replace('\\', '<br>');
-console.log("Updated Stuff");
-}
+update();
 </script>
 <body>
 </html>
