--- a/swag/DISCORD.html
+++ b/swag/DISCORD.html
@@ -4,13 +4,69 @@
 <title>DISCORD BOTS IN YO BROWSER</title>
 </head>
 <body>
-<h1>LIVE CHAT</h1>
+<h1>GENERAL</h1>
+<div id="general" style="border:1px solid black;">
+LOADING...
+</div>
+<script>
+function update() {
+  $.get("http://pikabot01.xyz/wow/110373943822540800-110373943822540800.txt", function(data) {
+	var ayy = data.replace(/\\/g, "<br>");
+    $("#general").html(ayy);
+    window.setTimeout(update, 1000);
+  });
+}
+update();
+</script>
+<h1>DEVELOPMENT</h1>
+<div id="development" style="border:1px solid black;">
+LOADING...
+</div>
+<script>
+function update() {
+  $.get("http://pikabot01.xyz/wow/110373943822540800-110374153562886144.txt", function(data) {
+	var ayy = data.replace(/\\/g, "<br>");
+    $("#development").html(ayy);
+    window.setTimeout(update, 1000);
+  });
+}
+update();
+</script>
+<h1>TESTING ^_`</h1>
+<div id="testing1" style="border:1px solid black;">
+LOADING...
+</div>
+<script>
+function update() {
+  $.get("http://pikabot01.xyz/wow/110373943822540800-113743192305827841.txt", function(data) {
+	var ayy = data.replace(/\\/g, "<br>");
+    $("#testing1").html(ayy);
+    window.setTimeout(update, 1000);
+  });
+}
+update();
+</script>
+<h1>TESTING [\]</h1>
+<div id="testing2" style="border:1px solid black;">
+LOADING...
+</div>
+<script>
+function update() {
+  $.get("http://pikabot01.xyz/wow/110373943822540800-132632676225122304.txt", function(data) {
+	var ayy = data.replace(/\\/g, "<br>");
+    $("#testing2").html(ayy);
+    window.setTimeout(update, 1000);
+  });
+}
+update();
+</script>
+<h1>ULTIMATE SH*TPOSTING</h1>
 <div id="woah" style="border:1px solid black;">
 LOADING...
 </div>
 <script>
 function update() {
-  $.get("http://pikabot01.xyz/wow/110373943822540800.txt", function(data) {
+  $.get("http://pikabot01.xyz/wow/110373943822540800-119222314964353025.txt", function(data) {
 	var ayy = data.replace(/\\/g, "<br>");
     $("#woah").html(ayy);
     window.setTimeout(update, 1000);
