--- a/swag/DISCORD.html
+++ b/swag/DISCORD.html
@@ -9,70 +9,70 @@
 LOADING...
 </div>
 <script>
-function update() {
+function update1() {
   $.get("http://pikabot01.xyz/wow/110373943822540800-110373943822540800.txt", function(data) {
 	var ayy = data.replace(/\\/g, "<br>");
     $("#general").html(ayy);
-    window.setTimeout(update, 1000);
+    window.setTimeout(update1, 1000);
   });
 }
-update();
+update1();
 </script>
 <h1>DEVELOPMENT</h1>
 <div id="development" style="border:1px solid black;">
 LOADING...
 </div>
 <script>
-function update() {
+function update2() {
   $.get("http://pikabot01.xyz/wow/110373943822540800-110374153562886144.txt", function(data) {
 	var ayy = data.replace(/\\/g, "<br>");
     $("#development").html(ayy);
-    window.setTimeout(update, 1000);
+    window.setTimeout(update2, 1000);
   });
 }
-update();
+update2();
 </script>
 <h1>TESTING ^_`</h1>
 <div id="testing1" style="border:1px solid black;">
 LOADING...
 </div>
 <script>
-function update() {
+function update3() {
   $.get("http://pikabot01.xyz/wow/110373943822540800-113743192305827841.txt", function(data) {
 	var ayy = data.replace(/\\/g, "<br>");
     $("#testing1").html(ayy);
-    window.setTimeout(update, 1000);
+    window.setTimeout(update3, 1000);
   });
 }
-update();
+update3();
 </script>
 <h1>TESTING [\]</h1>
 <div id="testing2" style="border:1px solid black;">
 LOADING...
 </div>
 <script>
-function update() {
+function update4() {
   $.get("http://pikabot01.xyz/wow/110373943822540800-132632676225122304.txt", function(data) {
 	var ayy = data.replace(/\\/g, "<br>");
     $("#testing2").html(ayy);
-    window.setTimeout(update, 1000);
+    window.setTimeout(update4, 1000);
   });
 }
-update();
+update4();
 </script>
 <h1>ULTIMATE SH*TPOSTING</h1>
 <div id="woah" style="border:1px solid black;">
 LOADING...
 </div>
 <script>
-function update() {
+function update5() {
   $.get("http://pikabot01.xyz/wow/110373943822540800-119222314964353025.txt", function(data) {
 	var ayy = data.replace(/\\/g, "<br>");
     $("#woah").html(ayy);
-    window.setTimeout(update, 1000);
+    window.setTimeout(update5, 1000);
   });
 }
-update();
+update5();
 </script>
 <body>
 </html>
