--- a/projects/Discord In Yo Browser/Discord Bots.html
+++ b/projects/Discord In Yo Browser/Discord Bots.html
@@ -18,7 +18,7 @@
 		<li class="tab col s3"><a href="#development">#Development</a></li>
 		<li class="tab col s3"><a href="#testing1">#Testing ^_`</a></li>
 		<li class="tab col s3"><a href="#testing2">#Testing [\]</a></li>
-		<li class="tab col s3"><a href="#woah">#Ultimate Sh*tposting</a></li>
+		<li class="tab col s3"><a href="#woah">#Ultimate Shitposting</a></li>
       </ul>
     </div>
 <div id="general" style="border:1px solid black;">
