--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ html {
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
 <meta name="description" content="Welcome to my site, we have cookies">
-<meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
+<meta name="keywords" content="pikadude, pikadude01, PikaGirl, pika, dude">
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
@@ -61,7 +61,7 @@ html {
 	  <a data-activates="mobile-demo" class="button-collapse" style="cursor: pointer;"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
 	    <li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
-        <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaBot01</a></li>
+        <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaGirl</a></li>
         <li><a class="dropdown-button" data-activates="links"><i class="material-icons left">add_circle_outline</i>Links</a></li>
 		<li><a href="http://www.supercounters.com/stats/1291258"><!-- BEGIN: Powered by Supercounters.com -->
 <center>
@@ -73,7 +73,7 @@ html {
       </ul>
 	  <ul class="side-nav" id="mobile-demo">
 	  	<li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
-	    <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaBot01</a></li>
+	    <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaGirl</a></li>
         <li><a class="dropdown-button" data-activates="lonks"><i class="material-icons left">add_circle_outline</i>Links</a></li>
 	  </ul>
     </div>
