--- a/projects/Airhorn/airhorn.html
+++ b/projects/Airhorn/airhorn.html
@@ -7,10 +7,18 @@
 <meta name="keywords" content="airhorn, airhorn, airhorn, airhorn">
 <link rel="stylesheet" type="text/css" href="airhorn.css">
 <script type="text/javascript" src="airhorn.js"></script>
+<script src="http://platform.twitter.com/widgets.js"></script>
 </head>
 <body>
-<div style="position:fixed; height: 100%; width: 100%; top:0;left 0;" align="center">
-  <img id="airhorn" onclick="airhorn()" src='airhorn.png' style="height: 100%" />
+<div style="position:fixed;">
+<p id="airhorn2">No Horns Air'd</p>
+<a id="airhorntweet" class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=I%20just%20air%27d%20some%20horns!&url=http://theairhorn.tk&hashtags=theairhorndottk">Tweet</a>
+<br>
+<br>
+<a href="http://pikadude.xyz">wat?</a>
+</div>
+<div style="height: 100%; width: 100%;" align="center">
+<img id="airhorn" onclick="airhorn()" src='airhorn.png' style="height: 100%"></img>
 </div>
 </body>
 </html>
