--- a/projects/Airhorn/airhorn.html
+++ b/projects/Airhorn/airhorn.html
@@ -15,7 +15,7 @@
 <a id="airhorntweet" class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=I%20just%20air%27d%20some%20horns!&url=http://theairhorn.tk&hashtags=theairhorndottk">Tweet</a>
 <br>
 <br>
-<a href="http://pikadude.xyz">wat?</a>
+<a href="http://pikadude.xyz">Back To Index</a>
 </div>
 <div style="height: 100%; width: 100%;" align="center">
 <img id="airhorn" onclick="airhorn()" src='airhorn.png' style="height: 100%"></img>
