--- a/projects/Airhorn/airhorn.html
+++ b/projects/Airhorn/airhorn.html
@@ -3,7 +3,7 @@
 <title>airhorn</title>
 <!--airhorn-->
 <link rel="icon" href="airhorn.png">
-<meta name="description" content="Airhorns are better than agario">
+<meta name="description" content="its a feature">
 <meta name="keywords" content="airhorn, airhorn, airhorn, airhorn">
 <link rel="stylesheet" type="text/css" href="airhorn.css">
 <script type="text/javascript" src="airhorn.js"></script>
