--- a/projects/Airhorn/airhorn.html
+++ b/projects/Airhorn/airhorn.html
@@ -18,7 +18,7 @@
 <a href="http://pikadude.xyz">Back To Index</a>
 </div>
 <div style="height: 100%; width: 100%;" align="center">
-<img id="airhorn" onclick="window.airhorn()" src='airhorn.png' style="height: 100%; cursor: pointer;"></img>
+<img id="airhorn" onclick="window.airhorn()" src='airhorn.png' alt="the best airhorn" style="height: 100%; cursor: pointer;"></img>
 </div>
 </body>
 </html>
