--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -29,6 +29,7 @@ background-color: white;
 </head>
 <body>
 <br>
+<br>
 <div class="box center" style="width: 900px;">
 <a style="font-size: 50px">Snail Speed</a>
 <p>Watch the interesting life of a virtual snail progress through its awesome journey.</p>
@@ -73,5 +74,10 @@ background-color: white;
 </tbody>
 </table>
 <br>
+<br>
+<!-- SCM Music Player http://scmplayer.net -->
+<script type="text/javascript" src="http://scmplayer.net/script.js" 
+data-config="{'skin':'skins/scmGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Thundersnail','url':'http://pikadude.xyz/Snail&20Speed/assets/snail1.mp3'}]}" ></script>
+<!-- SCM Music Player script end -->
 </body>
 </html>
