--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -77,7 +77,7 @@ background-color: white;
 <br>
 <!-- SCM Music Player http://scmplayer.net -->
 <script type="text/javascript" src="http://scmplayer.net/script.js" 
-data-config="{'skin':'skins/scmGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Thundersnail','url':'http://pikadude.xyz/Snail&20Speed/assets/snail1.mp3'}]}" ></script>
+data-config="{'skin':'skins/scmGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Thundersnail','url':'http://pikadude.xyz/projects/Snail&20Speed/assets/snail1.mp3'}]}" ></script>
 <!-- SCM Music Player script end -->
 </body>
 </html>
