--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -19,12 +19,12 @@ background-color: white;
 }
 </style>
 <title>Snail Speed</title>
+<script type="text/javascript" src="assets/jquery.js"></script>
 <meta name="description" content="Watch the interesting life of a virtual snail progress through its awesome journey.">
 <script type="text/javascript" src="assets/materialize/materialize.min.js"></script>
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="assets/materialize/materialize.min.css"  media="screen,projection"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<script type="text/javascript" src="assets/jquery.js"></script>
 <script type="text/javascript" src="assets/get.js"></script>
 </head>
 <body>
@@ -77,7 +77,7 @@ background-color: white;
 <br>
 <!-- SCM Music Player http://scmplayer.net -->
 <script type="text/javascript" src="http://scmplayer.net/script.js" 
-data-config="{'skin':'skins/scmGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Thundersnail','url':'http://pikadude.xyz/projects/Snail&20Speed/assets/snail1.mp3'}]}" ></script>
+data-config="{'skin':'skins/scmGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Thundersnail','url':'http://pikadude.xyz/projects/Snail%20Speed/assets/snail1.mp3'}]}" ></script>
 <!-- SCM Music Player script end -->
 </body>
 </html>
