--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -110,7 +110,7 @@ background-color: white;
 <script type="text/javascript" src="http://widget.supercounters.com/map.js"></script><script type="text/javascript">var sc_map_var = sc_map_var || [];sc_map(1297965,"118200","ff0000",1)</script><br><noscript><a href="http://www.supercounters.com/">Visitor Map Widget</a></noscript>
 <!-- END: Powered by Supercounters.com -->
 <br>
-<script>var __v='barc-user-PikaDude';</script>
+<script>var __v='barc-user-PikaDude001';</script>
                   <script type="text/javascript">
                       (function(d) {
                           var b = d.createElement("script"); b.type = "text/javascript"; b.async = true;
