--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -1,13 +1,5 @@
 <html id="snail">
 <head>
-<script>var __v='barc-user-PikaDude001';</script>
-                  <script type="text/javascript">
-                      (function(d) {
-                          var b = d.createElement("script"); b.type = "text/javascript"; b.async = true;
-                          b.src = ("https:" == d.location.protocol ? "https" : "http") + "://barc.com/js/libs/barc/barc.js";
-                          var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(b, s);
-                      })(document);
-</script>
 <style>
 .box
 {
@@ -49,6 +41,8 @@ background-color: white;
       <ul class="tabs">
         <li class="tab col s3"><a class="active" href="#table">Snail Stat Table</a></li>
         <li class="tab col s3"><a href="#webstats">Website Stat Table</a></li>
+		<li class="tab col s3"><a href="#chatroom">Chatroom</a></li>
+		<li class="tab col s3"><a href="#music">Music Player</a></li>
       </ul>
 </div>
 <div class="center box" style="width: 900px; padding: 10px" id="table">
@@ -117,8 +111,29 @@ background-color: white;
 <!-- BEGIN: Powered by Supercounters.com -->
 <script type="text/javascript" src="http://widget.supercounters.com/map.js"></script><script type="text/javascript">var sc_map_var = sc_map_var || [];sc_map(1297965,"118200","ff0000",1)</script><br><noscript><a href="http://www.supercounters.com/">Visitor Map Widget</a></noscript>
 <!-- END: Powered by Supercounters.com -->
-<br>
 </div>
+<div class="center box" style="width: 900px; padding: 10px" id="chatroom">
+<iframe name="CHATBUTTON_CHATBOX" id="CHATBUTTON_CHATBOX" src="https://www.chatbutton.com/chatroom/18381025/" width="850" height="500" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"><a href="https://www.chatbutton.com/chatroom/18381025/">Enter Chat Room</a></iframe>
+<script type="text/javascript">
+CHBT_channel="18381025";
+CHBT_title="Snail+Speed";
+CHBT_titlecolor="FFFFFF";
+CHBT_size="600x500";
+CHBT_bgcolor="FFFFFF";
+CHBT_textcolor="00C000";
+CHBT_textsize="12";
+CHBT_nncolor="00E400";
+CHBT_cpcolor="008B00";
+CHBT_profanityfilter="1";
+CHBT_position="inline";
+</script>
+<script type="text/javascript" src="https://www.chatbutton.com/c.js">
+</script>
+</div>
+<div class="center box" style="width: 900px; padding: 10px" id="music">
+<audio style="width:250px;" autoplay="" controls="" loop="" src="assets/snail1.mp3" type="audio/mp3"><p>Failed To Load Music ;(</p></audio>
+</div>
+<br>
 <br>
 <br>
 </body>
