added energy percentage

--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -71,6 +71,10 @@ background-color: white;
 <td id="mood">Loading</td>
 </tr>
 <tr>
+<td>Energy</td>
+<td id="energy">Loading</td>
+</tr>
+<tr>
 <td>Current Time</td>
 <td id="time">Loading</td>
 </tr>
