--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -55,7 +55,7 @@ background-color: white;
 <td id="total">Loading</td>
 </tr>
 <tr>
-<td>Life Span</td>
+<td>Life Length</td>
 <td id="uptime">Loading</td>
 </tr>
 <tr>
@@ -83,6 +83,7 @@ background-color: white;
 <td id="weather">Loading</td>
 </tr>
 </tbody>
+<p>Data Updates Every Ten Seconds.</p>
 </table>
 </div>
 <div class="center box" style="width: 900px; padding: 10px" id="webstats">
