--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ html {
       <ul class="right hide-on-med-and-down">
 	    <li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
         <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaGirl</a></li>
+        <li><a href="http://snailspeed.tk"><i class="material-icons left">wb_sunny</i>Snail Speed</a></li>
 		<li><a href="http://theairhorn.tk"><i class="material-icons left">volume_up</i>The Airhorn</a></li>
         <li><a class="dropdown-button" data-activates="links"><i class="material-icons left">add_circle_outline</i>Links</a></li>
 		<li><a href="http://www.supercounters.com/stats/1291258"><!-- BEGIN: Powered by Supercounters.com -->
@@ -75,6 +76,7 @@ html {
 	  <ul class="side-nav" id="mobile-demo">
 	  	<li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
 	    <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaGirl</a></li>
+		<li><a href="http://snailspeed.tk"><i class="material-icons left">wb_sunny</i>Snail Speed</a></li>
 		<li><a href="http://theairhorn.tk"><i class="material-icons left">volume_up</i>The Airhorn</a></li>
         <li><a class="dropdown-button" data-activates="lonks"><i class="material-icons left">add_circle_outline</i>Links</a></li>
 	  </ul>
