--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -26,6 +26,7 @@ background-color: white;
 <link type="text/css" rel="stylesheet" href="assets/materialize/materialize.min.css"  media="screen,projection"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <script type="text/javascript" src="assets/get.js"></script>
+<a href="http://pikadude.xyz" class="waves-effect waves-light btn" style="margin: 2px 2px;" target="_blank"><i class="material-icons left">arrow_back</i>Back To Index</a>
 </head>
 <body>
 <br>
