--- a/projects/Snail Speed/Snail.html
+++ b/projects/Snail Speed/Snail.html
@@ -19,13 +19,15 @@ background-color: white;
 }
 </style>
 <title>Snail Speed</title>
-<script type="text/javascript" src="assets/jquery.js"></script>
+<script type="text/javascript" src="assets/scripts/jquery.js"></script>
 <meta name="description" content="Watch the interesting life of a virtual snail progress through its awesome journey.">
 <script type="text/javascript" src="assets/materialize/materialize.min.js"></script>
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="assets/materialize/materialize.min.css"  media="screen,projection"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<script type="text/javascript" src="assets/get.js"></script>
+<script type="text/javascript" src="assets/scripts/get.js"></script>
+<script type="text/javascript" src="assets/scripts/push.js"></script>
+<script type="text/javascript" src="assets/scripts/noot.js"></script>
 <a href="http://pikadude.xyz" class="waves-effect waves-light btn" style="margin: 2px 2px;" target="_blank"><i class="material-icons left">arrow_back</i>Back To Index</a>
 </head>
 <body>
@@ -36,7 +38,7 @@ background-color: white;
 <p>Watch the interesting life of a virtual snail progress through its awesome journey.</p>
 </div>
 <div align="center">
-<img src="assets/snail.png"></img>
+<img src="assets/images/snail.png"></img>
 </div>
 <div class="col s12 center" style="width: 900px">
       <ul class="tabs">
