--- a/projects/SnailSpeed/Snail.html
+++ b/projects/SnailSpeed/Snail.html
@@ -117,6 +117,16 @@ background-color: white;
 <script type="text/javascript" src="http://widget.supercounters.com/map.js"></script><script type="text/javascript">var sc_map_var = sc_map_var || [];sc_map(1297965,"118200","ff0000",1)</script><br><noscript><a href="http://www.supercounters.com/">Visitor Map Widget</a></noscript>
 <!-- END: Powered by Supercounters.com -->
 </div>
+<div class="center box" style="width: 900px; padding: 10px" id="achievements">
+<table class="bordered striped">
+<thead>
+<th>Achievements</th>
+</thead>
+<tbody>
+<tr id="1"></tr>
+</tbody>
+</table>
+</div>
 <br>
 <br>
 <br>
