--- a/projects/Airhorn/airhorn.html
+++ b/projects/Airhorn/airhorn.html
@@ -4,7 +4,7 @@
 <!--airhorn-->
 <link rel="icon" href="airhorn.png">
 <meta name="description" content="its a feature">
-<meta name="keywords" content="airhorn, airhorn, airhorn, airhorn">
+<meta name="keywords" content="pikadude, airhorn, dot, tk, the">
 <link rel="stylesheet" type="text/css" href="airhorn.css">
 <script type="text/javascript" src="airhorn.js"></script>
 <script src="http://platform.twitter.com/widgets.js"></script>
