--- a/projects/SnailSpeed/Snail.html
+++ b/projects/SnailSpeed/Snail.html
@@ -20,6 +20,7 @@ background-color: white;
 }
 </style>
 <title>Snail Speed</title>
+<meta name="keywords" content="snailspeed, pikadude, snail, speed, tk, snail speed">
 <script type="text/javascript" src="assets/scripts/jquery.js"></script>
 <meta name="description" content="Watch the interesting life of a virtual snail progress through its awesome journey.">
 <script type="text/javascript" src="assets/materialize/materialize.min.js"></script>
