snail sped update

--- a/projects/SnailSpeed/Snail.html
+++ b/projects/SnailSpeed/Snail.html
@@ -29,7 +29,9 @@ background-color: white;
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <script type="text/javascript" src="assets/scripts/noot.js"></script>
 <script type="text/javascript" src="assets/scripts/get.js"></script>
+<div style="padding: 10px 10px">
 <a href="http://pikadude.xyz" class="waves-effect waves-light btn" style="margin: 2px 2px;" target="_blank"><i class="material-icons left">arrow_back</i>Back To Index</a>
+</div>
 </head>
 <body>
 <br>
@@ -44,6 +46,7 @@ background-color: white;
 <div class="col s12 center" style="width: 900px">
       <ul class="tabs">
         <li class="tab col s3"><a class="active" href="#table">Snail Stat Table</a></li>
+		<li class="tab col s3"><a href="#log">Snail Log</a></li>
         <li class="tab col s3"><a href="#webstats">Website Stat Table</a></li>
       </ul>
 </div>
@@ -119,15 +122,9 @@ background-color: white;
 <script type="text/javascript" src="http://widget.supercounters.com/map.js"></script><script type="text/javascript">var sc_map_var = sc_map_var || [];sc_map(1297965,"118200","ff0000",1)</script><br><noscript><a href="http://www.supercounters.com/">Visitor Map Widget</a></noscript>
 <!-- END: Powered by Supercounters.com -->
 </div>
-<div class="center box" style="width: 900px; padding: 10px" id="achievements">
-<table class="bordered striped">
-<thead>
-<th>Achievements</th>
-</thead>
-<tbody>
-<tr id="1"></tr>
-</tbody>
-</table>
+<div class="box" style="width: 900px; padding: 10px; margin: auto auto;" id="log">
+<pre id="logs" style="border:1px solid black;">
+</pre>
 </div>
 <br>
 <br>
