Phoenix Wright Bot

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ html {
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
 <meta name="description" content="Welcome to my site, we have cookies">
-<meta name="keywords" content="pikadude, pikadude01, PikaGirl, pika, dude">
+<meta name="keywords" content="pikadude, pikadude01, PikaGirl, pika, dude, snailspeed, airhorn, memes">
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
