Phoenix Wright Bot

--- a/projects/PhoenixWrightBot/home.html
+++ b/projects/PhoenixWrightBot/home.html
@@ -199,11 +199,12 @@ html {
 </div>
 <div style="padding: 10px 10px" id="commands">
 <table class="bordered">
-<thead><tr><th style="font-size: 120%">Commands</th></tr></thead>
+<thead><tr><th style="font-size: 120%; font-family: Ace Attorney;">Commands</th></tr></thead>
 <tbody>
-<tr><td>!!!ping</td><td class="right-align">Check to see the bots responsiveness.</td></tr>
-<tr><td>!!!help</td><td class="right-align">Displays a help message</td></tr>
-<tr><td>!!!object <something to object></td><td class="right-align">Object something (!!!object You are wrong!)</td></tr>
+<tr><td style="font-family: Ace Attorney; font-size: 18px">!!!ping</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Check to see the bots responsiveness.</td></tr>
+<tr><td style="font-family: Ace Attorney; font-size: 18px">!!!help</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Displays a help message</td></tr>
+<tr><td style="font-family: Ace Attorney; font-size: 18px">!!!object [something to object]</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Object something (!!!object You are wrong!)</td></tr>
+<tr><td style="font-family: Ace Attorney; font-size: 18px">!!!invite</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Displays an invite link for the bot</td></tr>
 </tbody>
 </table>
 <p style="font-size:50px; font-family: Ace Attorney;" align="center">More features coming soon!</p>
@@ -212,7 +213,7 @@ html {
 <p style="font-size:60px; font-family: Ace Attorney;" align="center">Coming Soon!</p>
 </div>
 <div align="center" style="padding: 10px 10px">
-<a href="https://discordapp.com/oauth2/authorize?&client_id=226964246339125248&scope=bot" class="button" target="_blank">Add To Your Server</a>
+<a href="https://discordapp.com/oauth2/authorize?&client_id=226964246339125248&scope=bot" class="button" target="_blank" style="font-family: Ace Attorney; font-size: 40px">Add To Your Server</a>
 </div>
 </body>
 </html>
