SNAIL SPEED UPDATE!

--- a/projects/SnailSpeed/Snail.html
+++ b/projects/SnailSpeed/Snail.html
@@ -41,8 +41,7 @@ background-color: white;
 <p>Watch the interesting life of a virtual snail progress through its awesome journey.</p>
 </div>
 <div align="center">
-<img src="assets/images/snail.png"></img>
-</div>
+<iframe style="margin: 10px 10px" src="http://content.jwplatform.com/players/kygGLxug-YcogsPii.html" width="500" height="400" frameborder="0" scrolling="auto" allowfullscreen></iframe>
 <div class="col s12 center" style="width: 900px">
       <ul class="tabs">
         <li class="tab col s3"><a class="active" href="#table">Snail Stat Table</a></li>
