--- a/projects/PhoenixWrightBot/home.html
+++ b/projects/PhoenixWrightBot/home.html
@@ -3,79 +3,9 @@
 <head>
 <title>Phoenix Wright Discord Bot - Home</title>
 <style>
-.center
-{
+.center {
      margin: 0 auto;
      width: 100px;
-}
-/* The popup (background) */
-.popup {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* popup Content */
-.popup-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-}
-
-/* The Close Button */
-.close {
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #ff3300;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.popup-header {
-    padding: 2px 16px;
-    background-color: #f2f2f2;
-    color: black;
-}
-
-.popup-body {padding: 2px 16px;}
-
-.popup-footer {
-    padding: 2px 16px;
-    background-color: #f2f2f2;
-    color: black;
 }
 html { 
   background: url(assets/images/background.png) no-repeat center center fixed; 
@@ -205,6 +135,7 @@ html {
 <tr><td style="font-family: Ace Attorney; font-size: 18px">!!!help</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Displays a help message</td></tr>
 <tr><td style="font-family: Ace Attorney; font-size: 18px">!!!object [something to object]</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Object something (!!!object You are wrong!)</td></tr>
 <tr><td style="font-family: Ace Attorney; font-size: 18px">!!!invite</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Displays an invite link for the bot</td></tr>
+<tr><td style="font-family: Ace Attorney; font-size: 18px">@Phoenix Wright OBJECTION</td><td class="right-align" style="font-family: Ace Attorney; font-size: 18px">Cleverbot usage</td></tr>
 </tbody>
 </table>
 <p style="font-size:50px; font-family: Ace Attorney;" align="center">More features coming soon!</p>
