SNAIL SPEED UPDATE!

--- a/projects/PhoenixWrightBot/home.html
+++ b/projects/PhoenixWrightBot/home.html
@@ -123,7 +123,7 @@ html {
 </div>
 <div style="padding: 10px 10px;" id="home">
 <p style="font-size:30px; font-family: Ace Attorney;" align="center">Phoenix Wright is a bot created for Discord, a free talk and text app<br>Phoenix Wright can create animated objection gifs within a matter of seconds like this one:</p>
-<p align="center"><img id="exampleGif" src="http://pikabot01.xyz/ImAlwaysWright/228101516672630784.gif" width="500px"></img><br><i class="material-icons" onclick="repeatGif();" style="cursor: pointer;" title="Repeat?">loop</i></p>
+<p align="center"><img id="exampleGif" src="assets/images/objection.gif" width="500px"></img><br><i class="material-icons" onclick="repeatGif();" style="cursor: pointer;" title="Repeat?">loop</i></p>
 <div id="THESPINNER"><div id="spinner"><div class="spinner" role="spinner"><div class="spinner-icon"></div></div></div></div>
 <p style="font-size:20px; font-family: Ace Attorney;" align="center">Now you can object to your friends statements!</p>
 </div>
