--- a/projects/SnailSpeed/Snail.html
+++ b/projects/SnailSpeed/Snail.html
@@ -121,7 +121,7 @@ background-color: white;
 <script type="text/javascript" src="http://widget.supercounters.com/map.js"></script><script type="text/javascript">var sc_map_var = sc_map_var || [];sc_map(1297965,"118200","ff0000",1)</script><br><noscript><a href="http://www.supercounters.com/">Visitor Map Widget</a></noscript>
 <!-- END: Powered by Supercounters.com -->
 </div>
-<div class="box" style="width: 900px; padding: 10px; margin: auto auto;" id="log">
+<div class="box" style="width: 900px; padding: 10px; margin: auto auto;" align="left" id="log">
 <pre id="logs" style="border:1px solid black;">
 </pre>
 </div>
